修复product context出现的一些问题。